<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image6"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp">

    <ImageView
        android:id="@+id/restaurantImageView"
        android:layout_width="194dp"
        android:layout_height="149dp"
        android:layout_marginBottom="16dp"
        android:baselineAligned="false"
        android:contentDescription="@string/restaurant_image_description"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/restaurantNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:rotationX="-4"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bookButton"
        android:layout_width="178dp"
        android:layout_height="78dp"
        android:text="@string/book_table" />

    <Button
        android:id="@+id/returnHomeButton"
        android:layout_width="178dp"
        android:layout_height="84dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/return_to_home" />

</LinearLayout>
