<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/image4">

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:background="#80000000"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="@android:color/white"
        android:textColorHint="#000000"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/dateInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="date"
        android:background="#80000000"
        android:clickable="true"
        android:focusable="true"
        android:hint="@string/select_date"
        android:inputType="date"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="@android:color/white"
        android:textColorHint="#000000"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/timeInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="time"
        android:background="#80000000"
        android:clickable="true"
        android:focusable="true"
        android:hint="@string/select_time"
        android:inputType="time"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="@android:color/white"
        android:textColorHint="#000000"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/bookButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#FF5722"
        android:text="@string/book_table"
        android:textColor="#212121"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#80000000"
        android:padding="8dp"
        android:text="@string/choose_restaurant"
        android:textColor="#000000"
        android:textSize="18sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:background="#80000000"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bookButton"
        tools:ignore="TextSizeCheck" />
</LinearLayout>
